@@ -143,7 +143,7 @@ MAX_CVT: Limits the maximum image dimensions in pixels (the WID or HEI
 commands) allowable for dynamic JPEG export via the CVT command. This 
 prevents huge requests from overloading the server. The default is 5000.
 
-LAYERS: The number of quality layers to decode for image that support 
+MAX_LAYERS: The number of quality layers to decode for image that support 
 progressive quality encoding, such as JPEG2000. Ignored for other file 
 formats. The default is 1.
 
