@@ -26,6 +26,7 @@
 using namespace std;
 
 
+#define MX 4096
 
 
 /* My version of the JPEG error_exit function. We want to pass control back
@@ -83,14 +84,11 @@ iip_init_destination (j_compress_ptr cinfo)
     mx = cinfo->image_width * cinfo->image_height * cinfo->input_components;
   }
 
-  /* Add a kB because when we have very small tiles, the JPEG data
+  /* Add some extra because when we have very small tiles, the JPEG data
      including header can end up being larger than the original raw
      data size!
-     However, this seems to break something in Kakadu, so disable in this case
   */
-#ifndef HAVE_KAKADU
-  mx += 2048;
-#endif
+  mx = (mx < MX)? MX : mx;
 
 
   /* Allocate the output buffer --- it will be released when done with image
@@ -263,7 +261,7 @@ unsigned int JPEGCompressor::CompressStrip( unsigned char* buf, unsigned int til
   dest->source = buf;
 
 
-//   JSAMPROW *array = new JSAMPROW[tile_height+1];
+//   JSAMPROW *array = new JSAMPROW[tile_height];
 //   for( int y=0; y < tile_height; y++ ){
 //     array[y] = &data[ y * row_stride ];
 //   }
@@ -361,7 +359,6 @@ int JPEGCompressor::Compress( RawTile& rawtile ) throw (string)
   //  or something like that. So, we use an extern "C" function declared at the top
   //  of this file and pass our arguments through this. I'm sure there's a better
   //  way of doing this, but this seems to work :/
-
   setup_error_functions( &cinfo );
 
   jpeg_create_compress( &cinfo );
@@ -390,7 +387,7 @@ int JPEGCompressor::Compress( RawTile& rawtile ) throw (string)
   dest->strip_height = 0;
 
   // Allocate memory for our destination
-  dest->source = new unsigned char[width*height*channels + 2048]; // Add an extra 2k for extra buffering
+  dest->source = new unsigned char[width*height*channels + MX]; // Add some extra buffering
 
   // Set floating point quality (highest, but possibly slower depending
   //  on hardware)
@@ -408,6 +405,8 @@ int JPEGCompressor::Compress( RawTile& rawtile ) throw (string)
 
   jpeg_start_compress( &cinfo, TRUE );
 
+  // Add an identifying comment
+  jpeg_write_marker( &cinfo, JPEG_COM, (const JOCTET*) "Generated by IIPImage", 21 );
 
   // Send the tile data
   unsigned int y;
@@ -419,7 +418,7 @@ int JPEGCompressor::Compress( RawTile& rawtile ) throw (string)
 
   if( (row_stride * height) <= (512*512*channels) ){
 
-    JSAMPROW *array = new JSAMPROW[height+1];
+    JSAMPROW *array = new JSAMPROW[height];
     for( y=0; y < height; y++ ){
       array[y] = &data[ y * row_stride ];
     }
