@@ -1,3 +1,8 @@
+22/07/2011:
+	- Added 16bit and CIELAB support for JPEG2000.
+	- Other minor cleanups.
+
+
 24/05/2011:
 	- Fix added to DeepZoom.cc as FreeBSD does not have the log2 function.
 	  Thanks to Andrew Hankinson for spotting this.
